app started. no database connection. no swagger

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 NODE_ENV=development
 PORT=9999
 #MONGO_DB_URL=mongodb://mongo:27017/demo-app
-PSQL_DB_URL=localhost:5432
+DATABASE_URL=localhost:5432
+#PSQL_DB_URL=localhost:5432
 PSQL_DB_NAME=demo-app
 PSQL_USER=postgres
 PSQL_PASS=5qoaig3g7w
