--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "awilix-express": "^2.1.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
     "express": "^4.17.1",
     "express-status-monitor": "^1.2.6",
+    "http-status": "^1.3.2",
+    "log4js": "^4.3.1",
+    "method-override": "^3.0.0",
+    "morgan": "^1.9.1",
     "pg": "^7.11.0",
     "pm2": "^3.5.1",
     "sequelize": "^5.8.9",
